# hackathon-hacks-ai-rutube-txtai

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: index.py  main.py
