[tool.poetry]
name = "txtai-service"
version = "0.1.0"
description = "Search by txtAI"
license = "Apache-2.0"
authors = ["AI RnD Lab Developers"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "0.23.2"
fastapi = "0.103.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
